--- a/FlickrViperTest/Base.lproj/Main.storyboard
+++ b/FlickrViperTest/Base.lproj/Main.storyboard
@@ -76,8 +76,8 @@
                                     </collectionViewCell>
                                 </cells>
                                 <connections>
-                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="hjE-HH-GkO"/>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="wne-HC-mxv"/>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="amU-ha-jfp"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="VS4-6p-3mn"/>
                                 </connections>
                             </collectionView>
                         </subviews>
